examples/programs/invalid/stack_type_mismatch_fill.sst
.version 1
; Invalid: initial_fill expects location, but stack has float

const_float 1.0
initial_fill 1
halt
